# automagik-omni

./: .env-example  .env.discord.example  .env.example  .env.ready-to-go  .gitignore  .gitmodules  .mcp.json  .mcp.json.example  .npmignore  .prettierignore  AGENTS.md  API_DEVELOPMENT_README.md  API_DOCUMENTATION.md  AUTOMAGIK_OMNI_FEATURES.md  CHANGELOG.md  CLAUDE.md  COMPLETE_API_GUIDE.md  CONTRIBUTING.md  DESKTOP_API_KEY_FIX.md  DESKTOP_BUILD_HANDOFF.md  DESKTOP_UI_STATUS.md  DISCORD_FEATURE_TOGGLES_IMPLEMENTATION.md  DISCORD_SECURITY_FIX_REPORT.md  ELECTRON_BOILERPLATE_COMPARISON.md  ELECTRON_FINAL_SUMMARY.txt  EVOLUTION_API_DESKTOP_INTEGRATION.md  EXECUTE_UI_FIX.md  FRONTEND_DEVELOPER_GUIDE.md  LICENSE  MIGRATION_COMPLETE.md  MULTI_TENANCY_PLAN.md  Makefile  NEXT_STEPS.md  NUCLEAR_FIX_EXECUTED.txt  NUCLEAR_FIX_SUMMARY.md  PGLITE-CONFIGURED.md  PGLITE-MIGRATION-COMPLETE.md  PGLITE_IMPLEMENTATION_COMPLETE.md  PGLITE_IMPLEMENTATION_SUMMARY.md  PRODUCTION-PGLITE-SETUP.md  (+248 more)
.claude/agents/: automagik-omni-agent-creator.md  automagik-omni-agent-enhancer.md  automagik-omni-analyzer.md  automagik-omni-claudemd.md  automagik-omni-clone.md  automagik-omni-coder.md  automagik-omni-dev-coder.md  automagik-omni-dev-designer.md  automagik-omni-dev-fixer.md  automagik-omni-dev-planner.md  automagik-omni-hooks.md  automagik-omni-multitenant-architect.md  automagik-omni-qa-tester.md  automagik-omni-quality.md  automagik-omni-reviewer.md  automagik-omni-self-learn.md  automagik-omni-testing-quality-guru.md  automagik-omni-tests.md  automagik-omni-whatsapp-specialist.md  forge-master.md  omni-forge-master.md
.claude/commands/: README.md  analyzer.md  builder.md  forge.md  (+7 more)
.genie/: missing-endpoints-implementation-plan.md
.githooks/: README.md  pre-commit  pre-push  setup.sh
.github/: labels.yml
alembic/: env.py
benchmarks/: startup_time.py
build-hooks/: hook-alembic.py  hook-ctypes.py  hook-discord.py  hook-sqlalchemy.py
debug_scripts/: run_basic_check.py  run_comprehensive_fix.py  run_fix.py  run_fixes.py  run_nuclear_test.py  run_target_tests.py  run_test.py  test_actual_import.py  test_basic_check.py  test_fixes.py  test_imports.py  test_pydantic_fix.py  test_run.py  test_schemas.py  test_specific_issue.py  verify_fix_applied.py
deploy/: omni-hub.service
docs/: CONFIGURATION.md  COVERAGE_POLICY.md  DEPLOYMENT.md  EVALUATION_REPORT.md  IPC_ARCHITECTURE.md  MESSAGE_SPLITTING.md  OPTIONAL_CHANNELS.md  OPTIONAL_DEPENDENCIES.md  PR_RELEASE_AUTOMATION.md  WORKFLOW_OPTIMIZATION_PROPOSAL.md  WORKFLOW_SETUP_SUMMARY.md  discord-parity-validation.md
gateway/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
genie/: ULTIMATE_VICTORY_COORDINATION.md  advanced-prompting-framework.md  automagik-hive-api-specification.md  automagik-hive-ui-integration-guide.md  automagik-omni-dev-discord-handler-fixer.md  automagik-omni-dev-endpoint-fixer.md  automagik-omni-dev-whatsapp-handler-fixer.md  test-framework-issues.md
scripts/: boot-debug-trap.sh  build-all.sh  build-backend.sh  build-desktop.sh  bump-version.py  bundle-python.sh  deploy.sh  dump_evolution_events.py  fix_unknown_message_types.py  generate_api_docs.sh  generate_message_table_from_raw.py  migrate_sqlite_to_postgres.py  migrate_sqlite_to_postgres_auto.py  raw_webhook_listener.py  setup-test-postgres.sh  setup_ipc_sockets.sh  sign-windows-installer.ps1  start_services_ordered.sh  test-boot-order.sh  test-bundle.sh  validate_multitenancy.py  wait_for_api.py
src/: __init__.py  __main__.py  asdaa.json  config.py  config_backup.py  config_backup_temp.py  config_fixed.py  config_new.py  evolution_api_client.py  ip_utils.py  ipc_config.py  logger.py  main.py  mcp_server.py  service.py  utils.py  version.py
tests/: README.md  __init__.py  conftest.py  sample_data.py  test_access_control_validation.py  test_agent_api_client_hive_detection.py  test_all_time_parameter.py  test_api_endpoints_e2e.py  test_api_mentions.py  test_automagik_hive_client.py  test_backward_compatibility.py  test_channels_base.py  test_cli_commands.py  test_comprehensive_integration.py  test_crud_api.py  test_crud_api_fixed.py  test_database_models.py  test_datetime_utils.py  test_evolution_api_sender_mentions.py  test_fixtures.py  test_global_settings_e2e.py  test_identity_linking.py  test_instance_utils.py  test_jid_utils.py  test_mention_parser.py  test_mentions_integration.py  test_message_utils.py  test_omni_endpoints.py  test_omni_endpoints_fixed.py  test_omni_handlers.py  test_omni_handlers_fixed.py  test_omni_models.py  test_omni_transformers.py  test_rate_limiter.py  test_real_world_scenarios.py  test_service_injection.py  test_session_filtering.py  test_session_filtering_integration.py  test_telemetry.py  test_trigger_matcher.py  (+5 more)
ui/: .gitignore  AUTOMAGIK_OMNI_README.md  BACKEND_MANAGER_IMPLEMENTATION_SUMMARY.md  PHASE_2_SUMMARY.md  PR_DESCRIPTION_UPDATED.md  TESTING_GUIDE.md  clean-start.sh  electron-builder.yml  package.json  pnpm-lock.yaml  tsconfig.web.tsbuildinfo
webhook_debug/: 20250626_133506_3EB0A37FA152FF9D864E3D_webhook.json  20250626_134716_3EB00021E6DF8BE0AA1432_webhook.json  20250626_134754_3EB0317D6FD592813607D0_webhook.json  20250626_135411_3EB0E2C015A29D390C5526_webhook.json  20250626_135645_3EB03DF5CCA9C850619933_webhook.json  20250626_153922_3EB0565087B6DA0E107080_webhook.json  20250626_153950_3EB085D2F57D988F25C017_webhook.json  20250626_154705_3EB01190648F27E4DEC7B0_webhook.json  20250626_160808_3EB07C9C4D057C857C01C4_webhook.json  20250626_160831_3EB038C92FEC5930D85265_webhook.json  20250626_160902_3EB0992999AF7DD1AE2E25_webhook.json  20250626_161136_3EB02EF1C6FBAD23D2C5BC_webhook.json  20250626_161600_3EB000B5F2F2C9182FCF8F_webhook.json  20250626_161611_3EB0A0A9A5D5AA4F5AB2F9_webhook.json  20250626_161632_3EB0344B8C3BA7F792CE30_webhook.json  20250626_162613_3EB00C07B60E919A9884FD_webhook.json  20250626_162620_3EB0039D2A91A31C2BAA69_webhook.json  20250626_162723_3EB02792D504B36042A2AB_webhook.json  20250626_162738_3EB0EC512EE0C310AC9641_webhook.json  20250626_164451_3EB04900F27FE274E206DC_webhook.json
(+548 files in other folders)
