[project]
name = "omni-hub"
version = "0.1.0"
description = "A hub for multiple chat channels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.6",
    "pika>=1.3.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.10",
    "boto3>=1.34.0",
    "httpx>=0.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
