[project]
name = "automagik-omni"
version = "0.3.3"
description = "Automagik Omni: Multi-tenant omnichannel messaging hub"
readme = "README.md"
authors = [
    {name = "Felipe Rosa", email = "felipe@namastex.ai"},
    {name = "Cezar Vasconcelos", email = "cezar@namastex.ai"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "pika>=1.3.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.10",
    "boto3>=1.34.0",
    "httpx>=0.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "alembic>=1.16.2",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytz>=2025.2",
]

[project.scripts]
automagik-omni = "src.cli.main_cli:app"
omnihub = "src.cli.main_cli:app"
omnihub-legacy = "src.cli.main:run"
omnihub-instance = "src.cli.instance_cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
discord = [
    "discord.py>=2.4.0",
    "PyNaCl>=1.5.0",
    "aiohttp>=3.8.0",
]
discord-voice = [
    "discord.py[voice]>=2.4.0",
    "PyNaCl>=1.5.0",
    "aiohttp>=3.8.0",
    "youtube-dl>=2021.12.17",
    "FFmpeg-python>=0.2.0",
]
discord-voice-ai = [
    "discord.py[voice]>=2.4.0",
    "PyNaCl>=1.5.0",
    "aiohttp>=3.8.0",
    "youtube-dl>=2021.12.17",
    "FFmpeg-python>=0.2.0",
    "openai>=1.0.0",
    "speechrecognition>=3.10.0",
    "pydub>=0.25.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long

[tool.ruff.lint.per-file-ignores]
"src/api/app.py" = ["E402"]  # Module imports not at top (required for setup_logging)
"src/api/app_backup.py" = ["E402"]
"src/channels/__init__.py" = ["F401"]  # Imported but unused (used for availability check)
"src/channels/discord/channel_handler.py" = ["E402", "E722"]  # Module imports and bare except
"src/channels/discord/interaction_handler.py" = ["E722"]  # Bare except for Discord error handling
"src/cli/main.py" = ["E402"]  # Module imports not at top (required for setup)
"src/cli/main_cli.py" = ["E402"]  # Module imports not at top (required for setup)
"src/channels/whatsapp/handlers.py" = ["E402"]  # Module imports not at top
"src/commands/discord_cmd.py" = ["E402"]  # Module imports not at top
"src/commands/discord_service_manager.py" = ["E402"]  # Module imports not at top
"tests/conftest.py" = ["E402"]  # Module imports not at top (required for setup)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
