[project]
name = "automagik-omni"
version = "0.5.2"
description = "Automagik Omni: Multi-tenant omnichannel messaging hub"
readme = "README.md"
authors = [
    {name = "Felipe Rosa", email = "felipe@namastex.ai"},
    {name = "Cezar Vasconcelos", email = "cezar@namastex.ai"}
]
requires-python = ">=3.12"
dependencies = [
    # Core framework
    "pydantic>=2.10.6",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "httpx>=0.28.0",
    "aiohttp>=3.12.15",
    # Database
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.10",
    "redis>=5.0.0",
    "alembic>=1.16.2",
    # API framework
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    # CLI
    "typer>=0.16.0",
    "rich>=14.0.0",
    # MCP
    "fastmcp>=0.1.0",
    # Messaging
    "pika>=1.3.2",
    # Utilities
    "pytz>=2025.2",
    "thefuzz>=0.22.1",
]

[project.scripts]
automagik-omni = "src.cli.main_cli:app"
omnihub = "src.cli.main_cli:app"
omnihub-legacy = "src.cli.main:run"
omnihub-instance = "src.cli.instance_cli:app"
genie-omni-mcp = "src.mcp_tools.genie_omni.__main__:mcp.run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
# WhatsApp channel (Evolution API) - voice message support
whatsapp = [
    "pydub>=0.25.1",  # Audio processing for voice messages
]
# Discord channel
discord = [
    "discord.py>=2.4.0",
    "PyNaCl>=1.5.0",
]
# Discord with voice support
discord-voice = [
    "discord.py[voice]>=2.4.0",
    "PyNaCl>=1.5.0",
    "youtube-dl>=2021.12.17",
    "FFmpeg-python>=0.2.0",
]
# Discord voice with AI transcription
discord-voice-ai = [
    "discord.py[voice]>=2.4.0",
    "PyNaCl>=1.5.0",
    "youtube-dl>=2021.12.17",
    "FFmpeg-python>=0.2.0",
    "openai>=1.0.0",
    "speechrecognition>=3.10.0",
    "pydub>=0.25.1",
]
# All channels (for full installation)
all-channels = [
    "automagik-omni[whatsapp,discord]",
]
# Testing dependencies
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
    "automagik-omni[test]",
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest-rerunfailures>=16.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.0",
    "types-pytz>=2025.2.0.20250809",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
line-length = 120
target-version = "py312"
include = ["src/**/*.py", "tests/**/*.py"]
exclude = [
    "scripts/**",
    "alembic/**",
    ".claude/**",
    "docs/**",
    "__pycache__/**",
    ".git/**",
    ".venv/**",
    "*.egg-info/**"
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long

[tool.ruff.lint.per-file-ignores]
"src/api/app.py" = ["E402"]  # Module imports not at top (required for setup_logging)
"src/api/app_backup.py" = ["E402"]
"src/channels/__init__.py" = ["F401"]  # Imported but unused (used for availability check)
"src/channels/discord/channel_handler.py" = ["E402", "E722"]  # Module imports and bare except
"src/channels/discord/interaction_handler.py" = ["E722"]  # Bare except for Discord error handling
"src/cli/main.py" = ["E402"]  # Module imports not at top (required for setup)
"src/cli/main_cli.py" = ["E402"]  # Module imports not at top (required for setup)
"src/channels/whatsapp/handlers.py" = ["E402"]  # Module imports not at top
"src/commands/discord_cmd.py" = ["E402"]  # Module imports not at top
"src/commands/discord_service_manager.py" = ["E402"]  # Module imports not at top
"tests/conftest.py" = ["E402"]  # Module imports not at top (required for setup)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
